# STGNP

./: .gitignore  Dockerfile.cpu  Dockerfile.cuda  LICENSE  README  README.md  build_docker.sh  build_docker_cpu.sh  dev.env.example  pyproject.toml  requirements.txt
baselines/Sklearn/: ACDC_baselines_ARIMA.py  ACDC_baselines_sklearn.py  UKB_baselines_sklearn.py  train_flat_data.py
baselines/SyntheticForecasting/: ARIMA_functions.py  Kuramoto_ARIMA.py  Lorenz_ARIMA.py  Pendulum_ARIMA.py  plots_kuramoto.ipynb  plots_lorenz.ipynb  plots_pendulum.ipynb  requirements.txt
configs/: cardiac_acdc.json  cardiac_acdc_all.json  cardiac_ukb.json  cardiac_ukb_all.json  default_params.json  env.py  kuramoto.json  lorenz.json  pendulum.json
dataset/: GraphDataset.py  dataset_utils.py
experiments/: ACDC_CV.py  ACDC_RunBest.py  GenerateDataSplits.py  GenerateDatasets.py  UKB_CV.py  UKB_RunBest.py
hpc/: 2_run_baselines_sklearn.sh  2_run_baselines_sklearn_UKB.sh  baseline_run_sklearn_acdc.sh  baseline_run_sklearn_ukb.sh  configurations.txt  create_database.sh  db_delete_optuna_study.sh  db_get_optuna_results.sh  db_sync_database.sh  delete_optuna_study.sh  generate_configurations.py  get_optuna_results_remove_nan_update.sh  multiplex_run_acdc_optuna_pg.sh  multiplex_run_best_models.sh  multiplex_run_ukb_optuna_pg.sh  run_best_models.sh  run_kuramoto_optuna_pg.sh  run_lorenz_optuna_pg.sh  run_multiplex_acdc_optuna_pg.sh  run_multiplex_ukb_optuna_pg.sh  run_pendulum_optuna_pg.sh  synth_run_kuramoto_optuna_pg.sh  synth_run_lorenz_optuna_pg.sh  synth_run_pendulum_optuna_pg.sh
latent_space_analysis/: check_results_latent_projection_acdc.ipynb  check_results_latent_projection_ukb.ipynb  final_latent_plots_ukb_acdc.ipynb  generate_biomarkers_acdc.ipynb  generate_biomarkers_ukb.ipynb  latent_space_analysis_acdc.ipynb  latent_space_analysis_ukb.ipynb  metadata_ukb_clean.ipynb  run_latent_analysis_acdc.ipynb  run_latent_analysis_ukb.ipynb
model/: encoder_decoder.py  mpgcn.py  plot_and_print_utils.py  spatial_batch_norm.py  stgnp.py  train_stgnp.py  train_stmgcn_ode.py
synthetic_data/: kuramoto.py  lorenz_model.py  pendulum.py  synthetic_dataset.py  train_synthetic_models.py
utils/: data_utils.py  get_optuna_results.py  graph_utils.py  kernels.py  losses.py  model_selection_optuna.py  model_selection_sklearn.py  normalisations.py  plot_utils.py  train_loop.py  train_utils.py  utils.py
